--- a/private/app/views/index.ejs
+++ b/private/app/views/index.ejs
@@ -30,6 +30,8 @@
   <meta name="twitter:title" content="<%=htmlWebpackPlugin.options.data.title%>"/>
   <meta name="twitter:description" content="<%=htmlWebpackPlugin.options.data.description%>"/>
   <meta name="twitter:image" content="<%=htmlWebpackPlugin.options.data.image%>"/>
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Roboto:400,700" rel="stylesheet">
+  <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
 <body>
   <div id="app"></div>
